@@ -1,3 +1,6 @@
+Mon Aug 14 2017 Aleksey
+	* look for locales directory in the program directory on Windows
+
 Fri Aug  4 2017 Aleksey
 	* support LibRhash bindings to PHP7
 
